# production-ai-agents

./: README.md
lang-production-api-main/: .env.example
my-code/langc-course/: .env.example  .gitignore  chains_v1.py  core_concepts.py  document_loaders.py  embeddings.py  embeddings_deep.py  main.py  pyproject.toml  smart_bot_section1.py  text_splitters.py  working_with_llms.py
original-code/production-course-main-code-main/: .gitignore
