[project]
name = "langc-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.7",
    "pypdf>=6.14.2",
    "python-dotenv>=1.2.2",
]
